--- a/assets/pug/mixin/element-product-box.pug
+++ b/assets/pug/mixin/element-product-box.pug
@@ -175,13 +175,13 @@ mixin product(data,modal,productmodal)
                     span.badge.bg-secondary.badge-xs.absolute.font-bold(class="top-3 right-3.5 rounded-[3px] text-2xs")= data.label
                 div(class="absolute top-[-1px] left-[-10px] flex flex-col invisible gap-1 p-3 transition-all duration-300 ease-linear opacity-0 cursor-pointer group-hover:visible group-hover:opacity-100 group-hover:left-[-1px]")
 
-                    a(href="javascript:void(0)" class="btn heart !p-0")
+                    a(href="wishlist.html" class="btn heart !p-0")
                         svg(width='0' height='0') 
                             linearGradient#lgrad(x1="0%" y1="50%" x2="100%" y2="50%")
                                 stop(offset='0%' style='stop-color:rgb(255, 97, 80);stop-opacity:1.00')
                                 stop(offset='100%' style='stop-color:rgb(255, 97, 80);stop-opacity:1.00')
                         i.fa-solid.fa-heart(class="flex items-center justify-center p-2 bg-white rounded-full")
-                    a(href="javascript:void(0)" class="btn shopping-cart !p-0")
+                    a(href="cart.html" class="btn shopping-cart !p-0")
                         svg(width='0' height='0') 
                             linearGradient#grid(cx="50%" cy="50%" r="50%")
                                 stop(offset='0%' style='stop-color:rgb(181 42 246);stop-opacity:1.00')
