--- a/assets/pug/mixin/element-wishlist-product-box.pug
+++ b/assets/pug/mixin/element-wishlist-product-box.pug
@@ -108,4 +108,4 @@ mixin wishlist-product(data)
                         span.text-content3.text-xs=data.rating                    
                     p.text-title.text-2xs.mt-2=data.delivery 
             div.pt-2.flex.justify-end
-                button.btn.btn-outline.btn-secondary.text-white Add To Cart
+                button.btn.btn-outline.btn-secondary.text-white.py-1.px-2.text-3xs Add To Cart
