kanban new design start

--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -123,9 +123,9 @@ if(filepond)
   script(src="../../assets/js/filepond/filepond.js")
   script(src="../../assets/js/filepond/filepond-custom.js") 
 
-if(jkanabBoard)
+if(jkanban)
   // jkanban js    
-  script( src="../../assets/js/jkanban.min.js")         
+  script( src="../../assets/js/jkanban.min.js") 
   script( src="../../assets/js/jkanban-custom.js")
 
 if(customizer)
