--- a/assets/pug/mixin/element-kanban-board.pug
+++ b/assets/pug/mixin/element-kanban-board.pug
@@ -6,34 +6,25 @@
       status:"primary",
       topBorder:"primary",
     },
+    { 
+      Name: "In Progress",
+      date: "15 Feb",
+      status:"warning",
+      topBorder:"warning",
+    },
     {
       Name: "Review",
       date: "15 Feb",
       status:"danger",
       topBorder:"danger",
     },
-    {
-      Name: "In Progress",
-      date: "15 Feb",
-      status:"warning",
-      topBorder:"warning",
-    },
   ];
 
 mixin kanban-board(data)
-  div.col-span-4.shadow-xl.rounded-b-md
-    div.h-2.rounded-t-md(class=`bg-${data.topBorder}`)
-    div.p-3.flex.justify-between
-      h3(class="font-bold text-title")=(data.Name)
-      i(data-feather="plus" class=`stroke-${data.status} border rounded`)
+  div.col-span-4.shadow-md.rounded-b-md.mb-4
+    div.h-1.rounded-t-md(class=`bg-${data.topBorder}`)
+    div.p-3
+      div.flex.justify-between
+        h3(class="font-bold text-title")=(data.Name)
+        i(data-feather="plus" class=`stroke-${data.status} border rounded`)
 
-//-   div.col-span-4.shadow-xl.rounded-b-md
-//-     div.bg-warning.h-2.rounded-t-md
-//-     div.p-3.flex.justify-between 
-//-       h3(class="font-bold text-title")=(data.Name)
-//-       i(data-feather="plus" class="stroke-warning border rounded")
-//-   div.col-span-4.shadow-xl.rounded-b-md
-//-     div.bg-danger.h-2.rounded-t-md
-//-     div.p-3.flex.justify-between
-//-       h3(class="font-bold text-title")=(data.Name)
-//-       i(data-feather="plus" class="stroke-danger border rounded")
