--- a/assets/pug/pages/unique/kanban-board.pug
+++ b/assets/pug/pages/unique/kanban-board.pug
@@ -2,7 +2,7 @@
 -var sidebar = true;
 
 //- feather
--var feather= true;
+-var feather=true;
 
 //- custom select
 -var customSelect = true;
@@ -10,8 +10,8 @@
 //- customizer 
 -var customizer = true;
 
-//- jkanban js
-- var jkanban = true; 
+//- jkanban  
+-var jkanban = true;
 
 //- Breadcrumbs
 -var pageTitle="Kanban-board";
@@ -38,17 +38,37 @@ html(lang='en')
 
         // Page Body Start
         div.page-body
-          div.grid.grid-cols-12.gap-card-gaps
-            div.col-span-12
-              div.card
-                div.card-header
-                  h3(class="font-bold text-title mb-3") Custom Board
-                  .divider.w-full
-                div.card-body
-                  div.grid.grid-cols-12.gap-3 
-                    each data in KANBAN_BOARD  
-                      +kanban-board(data)
-          // Page Body End  
+          div.grid.grid-cols-12.gap-card 
+            div.card.col-span-12.mb-4
+              div.card-header
+                +card-header("Default Demo")     
+              div.card-body
+                div.kanab-1.kanab-common
+            div.card.col-span-12.mb-4
+              div.card-header
+                +card-header("Custom Board")      
+              div.card-body
+                div.kanab-2.kanab-common
+            div.card.col-span-12.mb-4  
+              div.card-header 
+                +card-header("API")
+              div.card-body  
+                div.kanab-3.kanab-common 
+
+          //- div.grid.grid-cols-12.gap-card-gaps
+          //-   div.col-span-12
+          //-     div.card
+          //-       div.card-header
+          //-         h3(class="font-bold text-title mb-3") Custom Board
+          //-         .divider.w-full
+          //-       div.card-body 
+          //-         div.grid.grid-cols-12.gap-3  
+          //-           each data in KANBAN_BOARD 
+          //-             +kanban-board(data)  
+          //-           each data in KANBAN_BOARD_CARD
+          //-             +kanban-board-card(data)
+
+          // Page Body End
           +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
-      include ../../components/customizer
+      include ../../components/customizer   
   include ../../layout/footer-files
