--- a/assets/pug/data/sidebar-menu.pug
+++ b/assets/pug/data/sidebar-menu.pug
@@ -260,6 +260,10 @@
                               url:"invoice-preview.html",
                            },
                            {
+                              title:"Invoice Create",
+                              url:"invoice-create.html",
+                           },
+                           {
                               title:"Product",
                               url:"product.html",
                            },
