--- a/assets/pug/pages/unique/invoice-preview.pug
+++ b/assets/pug/pages/unique/invoice-preview.pug
@@ -74,12 +74,14 @@ html(lang='en')
                                                                 span.font-medium.text-content3 $787.6
                                         tr
                                             td(class="min-w-[220px]") 
-                                                p.text-title.text-xs.font-bold.uppercase(class="!mb-3") Shipping Address 
+                                                p.text-title.text-xs.font-bold.uppercase(class="!mb-0") Shipping Address 
+                                                p.text-title.text-xs.font-bold 	Vilma Gerhold
                                                 p.font-medium.text-content3 14300 Gallant Fox Ln, Bowie
                                                 p.font-medium.text-content3 Maryland, 20715, US
                                                 p.font-medium.text-content3 (301) 464-0110
                                             td(class="min-w-[220px]") 
-                                                p.text-title.text-xs.font-bold.uppercase(class="!mb-3") Billing Address 
+                                                p.text-title.text-xs.font-bold.uppercase(class="!mb-0") Billing Address 
+                                                p.text-title.text-xs.font-bold 	Vilma Gerhold
                                                 p.font-medium.text-content3 14300 Gallant Fox Ln, Bowie
                                                 p.font-medium.text-content3 Maryland, 20715, US
                                                 p.font-medium.text-content3 (301) 464-0110
@@ -89,6 +91,7 @@ html(lang='en')
                                                     include ../../components/table/checkout-table     
                                         tr  
                                             td(colspan="2" class="!text-left")
+                                                p.text-title.text-xs.font-bold.uppercase(class="!mb-0") Payment Detail
                                                 p.text-title.text-xs.font-semibold Payment Method: 
                                                     span.font-medium.text-content3 Mastercard
                                                 p.text-title.text-xs.font-semibold Card Holder: 
