--- a/assets/pug/components/table/invoice-table.pug
+++ b/assets/pug/components/table/invoice-table.pug
@@ -28,7 +28,8 @@ table.table(class="equal-space table-action invoice")
                         div.flex.items-center(class="gap-[.5625rem]") 
                             img(class="w-10 h-10 rounded-full" src=`../../assets/images/product/${bodyData.image}`, alt=`${bodyData.title}`) 
                             div
-                                h4(class="text-xs font-semibold text-title")=bodyData.title
+                                a(href="invoice-preview.html")
+                                    h4(class="text-xs font-semibold text-title")=bodyData.title
                                 span(class="block mt-1 font-semibold text-2xs text-content")=bodyData.subTitle 
                 td(class="min-w-[7.5rem]")  
                     h4(class="text-xs font-semibold text-title")= bodyData.userName
@@ -40,7 +41,7 @@ table.table(class="equal-space table-action invoice")
                     h4(class="text-xs font-semibold text-title")=bodyData.total
                 td(class="min-w-[3.125rem] text-right")
                     div.flex.items-center.gap-3(class="block 2lg:hidden") 
-                        button
+                        a(href="invoice-create.html")
                             +SVG_ICON("Edit-Square","w-[1.125rem] h-[1.125rem] stroke-title hover:stroke-primary")
                         button
                             +SVG_ICON("Delete","w-[1.125rem] h-[1.125rem] remove-invoice stroke-title hover:stroke-primary")
@@ -52,7 +53,7 @@ table.table(class="equal-space table-action invoice")
                         div.dropdown-menu(class=`!right-0 !left-unset`)
                             ul
                                 li
-                                    a(href="javascript:void(0)")
+                                    a(href="invoice-create.html")
                                         +SVG_ICON("Edit-Square","hover:stroke-primary w-[1.125rem] h-[1.125rem] stroke-title")   
                                 li
                                     a(href="javascript:void(0)")
