--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7201,6 +7201,9 @@ code[class*="language-"],
 .rounded-xl {
   border-radius: 0.75rem;
 }
+.rounded-md {
+  border-radius: 0.375rem;
+}
 .rounded-b-md {
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -7580,9 +7583,6 @@ code[class*="language-"],
 }
 .stroke-white {
   stroke: #fff;
-}
-.stroke-gray-500 {
-  stroke: #6b7280;
 }
 .stroke-\[4\] {
   stroke-width: 4;
