--- a/assets/pug/data/all-data.pug
+++ b/assets/pug/data/all-data.pug
@@ -18,5 +18,6 @@ include ./profile-setting.pug
 include ./recent-chat-app.pug
 include ./sidebar-menu.pug
 include ./tables.pug
+include ./user-card.pug
 include ./widgets.pug
 include ./email-index.pug
