--- a/assets/pug/pages/unique/invoice-create.pug
+++ b/assets/pug/pages/unique/invoice-create.pug
@@ -113,12 +113,10 @@ html(lang='en')
                                     p.font-medium.text-content3(class="!text-start rtl:!text-end") All accounts must be settled within seven days of receiving an invoice. to be paid by check, credit card, or online direct deposit. If the account is not paid within seven days, the agreed-upon quoted fee indicated above will be charged to the credits details provided as confirmation of the task completed.
                                 div.divider(class="w-full bg-gray-light")
                                 div.flex.items-center.gap-2.justify-end
-                                    a(href="javascript:window.print()").btn.btn-success.py-1.text-white.text-xs.flex.gap-2.items-center  
-                                        i(data-feather="printer" class="w-4 h-4 stroke-white")
-                                        | Print
+                                    a(href="javascript:window.print()").btn.btn-success.py-1.text-white.text-xs.flex.gap-2.items-center 
+                                        | Save
                                     a(href="../../assets/chat-doc/invoice.pdf" Download).btn.btn-secondary.py-1.text-white.text-xs.flex.gap-2.items-center 
-                                        i(data-feather="arrow-down" class="w-4 h-4 stroke-white")                                               
-                                        | Download   
+                                        | Cancel   
 
                                             
 
