--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4522,7 +4522,7 @@ code[class*="language-"],
   margin-bottom: 0.25rem;
 }
 .invoice-preview .table.equal-space .invoice-table thead tr th {
-  background-color: var(--border-light);
+  background-color: var(--body);
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
@@ -4531,7 +4531,7 @@ code[class*="language-"],
   padding-bottom: 0.75rem;
 }
 .invoice-preview .invoice-table-detail .table thead tr th {
-  background-color: var(--border-light);
+  background-color: var(--body);
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
@@ -5577,6 +5577,9 @@ code[class*="language-"],
 .mt-6 {
   margin-top: 1.5rem;
 }
+.mt-8 {
+  margin-top: 2rem;
+}
 .mt-\[12px\] {
   margin-top: 12px;
 }
@@ -5627,6 +5630,9 @@ code[class*="language-"],
 }
 .mt-card-gap {
   margin-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
+}
+.mt-\[-100px\] {
+  margin-top: -100px;
 }
 .box-border {
   box-sizing: border-box;
@@ -5718,6 +5724,9 @@ code[class*="language-"],
 .h-8 {
   height: 2rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-9 {
   height: 2.25rem;
 }
@@ -5768,6 +5777,9 @@ code[class*="language-"],
 }
 .h-\[12\.5rem\] {
   height: 12.5rem;
+}
+.h-\[123px\] {
+  height: 123px;
 }
 .h-\[127px\] {
   height: 127px;
@@ -6148,6 +6160,9 @@ code[class*="language-"],
 .w-\[11px\] {
   width: 11px;
 }
+.w-\[128px\] {
+  width: 128px;
+}
 .w-\[14px\] {
   width: 14px;
 }
@@ -6189,6 +6204,9 @@ code[class*="language-"],
 }
 .w-\[22px\] {
   width: 22px;
+}
+.w-\[245px\] {
+  width: 245px;
 }
 .w-\[24px\] {
   width: 24px;
@@ -6359,12 +6377,6 @@ code[class*="language-"],
   width: -moz-max-content;
   width: max-content;
 }
-.w-\[350px\] {
-  width: 350px;
-}
-.w-\[245px\] {
-  width: 245px;
-}
 .\!min-w-\[145px\] {
   min-width: 145px !important;
 }
@@ -6476,6 +6488,9 @@ code[class*="language-"],
 .min-w-\[238px\] {
   min-width: 238px;
 }
+.min-w-\[290px\] {
+  min-width: 290px;
+}
 .min-w-\[3\.125rem\] {
   min-width: 3.125rem;
 }
@@ -6553,15 +6568,6 @@ code[class*="language-"],
   min-width: -moz-max-content;
   min-width: max-content;
 }
-.min-w-\[230px\] {
-  min-width: 230px;
-}
-.min-w-\[200px\] {
-  min-width: 200px;
-}
-.min-w-\[245px\] {
-  min-width: 245px;
-}
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -6594,6 +6600,9 @@ code[class*="language-"],
 }
 .max-w-\[3\.375rem\] {
   max-width: 3.375rem;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 .max-w-\[35\%\] {
   max-width: 35%;
@@ -6652,9 +6661,6 @@ code[class*="language-"],
 }
 .max-w-xs {
   max-width: 20rem;
-}
-.max-w-\[300px\] {
-  max-width: 300px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -6789,6 +6795,9 @@ code[class*="language-"],
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-row-reverse {
   flex-direction: row-reverse;
@@ -7120,11 +7129,11 @@ code[class*="language-"],
 .border-t {
   border-top-width: 1px;
 }
-.border-dashed {
-  border-style: dashed;
-}
 .\!border-dashed {
   border-style: dashed !important;
+}
+.border-dashed {
+  border-style: dashed;
 }
 .\!border-none {
   border-style: none !important;
@@ -7194,6 +7203,9 @@ code[class*="language-"],
 .border-secondary {
   border-color: rgba(var(--secondary),1);
 }
+.border-secondary-extralight {
+  border-color: var(--secondary-extralight);
+}
 .border-success {
   border-color: var(--success);
 }
@@ -7254,6 +7266,9 @@ code[class*="language-"],
 .bg-dark {
   background-color: var(--dark);
 }
+.bg-facebook {
+  background-color: var(--facebook);
+}
 .bg-gray-extralight {
   background-color: var(--gray-extralight);
 }
@@ -7300,6 +7315,9 @@ code[class*="language-"],
 .bg-transparent {
   background-color: transparent;
 }
+.bg-twitter {
+  background-color: var(--twitter);
+}
 .bg-warning {
   background-color: var(--warning);
 }
@@ -7309,12 +7327,6 @@ code[class*="language-"],
 }
 .bg-white-light {
   background-color: rgba(255,255,255,0.15);
-}
-.bg-facebook {
-  background-color: var(--facebook);
-}
-.bg-twitter {
-  background-color: var(--twitter);
 }
 .bg-opacity-\[0\.45\] {
   --tw-bg-opacity: 0.45;
@@ -7447,6 +7459,9 @@ code[class*="language-"],
 .p-1 {
   padding: 0.25rem;
 }
+.p-12 {
+  padding: 3rem;
+}
 .p-2 {
   padding: 0.5rem;
 }
@@ -7545,6 +7560,10 @@ code[class*="language-"],
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 .px-\[\.3125rem\] {
   padding-left: .3125rem;
   padding-right: .3125rem;
@@ -7612,6 +7631,10 @@ code[class*="language-"],
 .px-card-space {
   padding-left: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
   padding-right: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
+}
+.px-padding {
+  padding-left: calc(0.9375rem + (1.5625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
+  padding-right: calc(0.9375rem + (1.5625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
 }
 .py-1 {
   padding-top: 0.25rem;
@@ -8080,6 +8103,9 @@ code[class*="language-"],
 .\!text-content {
   color: var(--content) !important;
 }
+.\!text-content3 {
+  color: var(--content3) !important;
+}
 .\!text-dark {
   color: var(--dark) !important;
 }
@@ -8168,8 +8194,8 @@ code[class*="language-"],
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.\!text-content3 {
-  color: var(--content3) !important;
+.\!text-danger {
+  color: var(--danger) !important;
 }
 .underline {
   text-decoration-line: underline;
@@ -10859,14 +10885,14 @@ code[class*="language-"],
 [dir="rtl"] .rtl\:border-l {
   border-left-width: 1px;
 }
+[dir="rtl"] .rtl\:border-l-2 {
+  border-left-width: 2px;
+}
 [dir="rtl"] .rtl\:pl-4 {
   padding-left: 1rem;
 }
 [dir="rtl"] .rtl\:pr-unset {
   padding-right: unset;
-}
-[dir="rtl"] .rtl\:text-end {
-  text-align: end;
 }
 [dir="rtl"] .rtl\:\!text-end {
   text-align: end !important;
@@ -11952,8 +11978,8 @@ code[class*="language-"],
     letter-spacing: 0.03125rem;
   }
   .lg\:text-4xl {
-    font-size: calc(1rem + (3.125 - 1) * ((100vw - 20rem) / (120 - 20)));
-    line-height: calc(1.375rem + (3.6875 - 1.375) * ((100vw - 20rem) / (120 - 20)));
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
   .lg\:text-base {
     font-size: 1.125rem;
@@ -12508,8 +12534,14 @@ code[class*="language-"],
   .\32md\:p-0 {
     padding: 0px;
   }
+  .\32md\:p-2 {
+    padding: 0.5rem;
+  }
   .\32md\:p-4 {
     padding: 1rem;
+  }
+  .\32md\:p-8 {
+    padding: 2rem;
   }
   .\32md\:px-0 {
     padding-left: 0px;
@@ -12734,9 +12766,6 @@ code[class*="language-"],
   .sm\:items-start {
     align-items: flex-start;
   }
-  .sm\:justify-start {
-    justify-content: flex-start;
-  }
   .sm\:justify-end {
     justify-content: flex-end;
   }
@@ -12763,9 +12792,6 @@ code[class*="language-"],
   }
   .sm\:gap-\[calc\(7px_\+_\(14_-_7\)_\*_\(\(100vw_-_320px\)_\/_\(1920_-_320\)\)\)\] {
     gap: calc(7px + (14 - 7) * ((100vw - 320px) / (1920 - 320)));
-  }
-  .sm\:gap-card-gap {
-    gap: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
   }
   .sm\:border-none {
     border-style: none;
