--- a/assets/pug/pages/unique/chat-app.pug
+++ b/assets/pug/pages/unique/chat-app.pug
@@ -68,7 +68,7 @@ html(lang='en')
       div.modal-main
          input#voice-call-modal(class="peer" name="voice-call-modal" type='checkbox')
          label.modal-overlay(class="peer-checked:block" for='voice-call-modal')
-         div.modal.modal-center(class="max-w-[450px] 2md:!w-full peer-checked:block rounded-xl")
+         div.modal.modal-center(class="max-w-[450px] 2md:!w-full peer-checked:opacity-100 peer-checked:visible rounded-xl")
             div.modal-body(class="!p-0 min-h-[500px]")
                div.voicecall.relative
                   img(src="../../assets/images/chat-app/12.jpg" alt="girl" class="h-[500px] w-[450px] opacity-70")
@@ -87,7 +87,7 @@ html(lang='en')
       div.modal-main
          input#accept-call-modal(class="peer" name="accept-call-modal" type='checkbox')
          label.modal-overlay(class="peer-checked:block" for='accept-call-modal')
-         div.modal.modal-center(class="max-w-[450px] 2md:!w-full peer-checked:block rounded-xl")
+         div.modal.modal-center(class="max-w-[450px] 2md:!w-full peer-checked:opacity-100 peer-checked:visible rounded-xl")
             div.modal-body(class="!p-0 min-h-[500px]")
                div.voicecall.relative
                   img(src="../../assets/images/chat-app/12.jpg" alt="girl" class="h-[500px] w-[450px] opacity-70")
@@ -117,7 +117,7 @@ html(lang='en')
       div.modal-main 
          input#video-call-modal(class="peer" name="video-call-modal" type='checkbox')
          label.modal-overlay(class="peer-checked:block" for='video-call-modal')
-         div.modal.modal-center(class="!min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:block rounded-none")
+         div.modal.modal-center(class="!min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:opacity-100 peer-checked:visible rounded-none")
             div.modal-body(class="!p-0")
                div.countdown.flex.gap-1.wrap.items-center.absolute(class="top-[3%] z-[1] right-[5%] text-[36px] 2md:text-3xl-responsive text-white font-extrabold")
                   label#callminutes 00
