--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -24,6 +24,7 @@ include ./element-social-media.pug
 include ./element-task-list-checkbox.pug
 include ./element-todo-list.pug
 include ./element-traffic-list.pug
+include ./element-user-card.pug
 include ./element-kanban-board.pug
 include ./element-kanban-card.pug 
 include ./element-widget1.pug
