started design edit-profile page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5300,6 +5300,11 @@ code[class*="language-"],
   top: 2.5rem;
   left: 3rem;
 }
+@media (max-width: 425px) {
+  .user-profile .user-bg .user-detail {
+    left: 1rem;
+  }
+}
 .product-wrapper-grid.list-view .product-box .card .card-body .user-profile .user-profile-detail img {
   width: 18.75rem;
 }
@@ -5408,6 +5413,9 @@ code[class*="language-"],
 }
 .\!top-7 {
   top: 1.75rem !important;
+}
+.\!top-8 {
+  top: 2rem !important;
 }
 .-right-3 {
   right: -0.75rem;
@@ -5594,9 +5602,6 @@ code[class*="language-"],
 }
 .top-\[6\%\] {
   top: 6%;
-}
-.\!top-8 {
-  top: 2rem !important;
 }
 .isolate {
   isolation: isolate;
@@ -5859,8 +5864,8 @@ code[class*="language-"],
 .mt-8 {
   margin-top: 2rem;
 }
-.mt-\[-50px\] {
-  margin-top: -50px;
+.mt-\[-70px\] {
+  margin-top: -70px;
 }
 .mt-\[12px\] {
   margin-top: 12px;
@@ -5912,9 +5917,6 @@ code[class*="language-"],
 }
 .mt-card-gap {
   margin-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
-}
-.mt-\[-70px\] {
-  margin-top: -70px;
 }
 .box-border {
   box-sizing: border-box;
@@ -6634,6 +6636,9 @@ code[class*="language-"],
 .w-\[calc\(100\%_-_40px\)\] {
   width: calc(100% - 40px);
 }
+.w-\[calc\(100\%_-_52px\)\] {
+  width: calc(100% - 52px);
+}
 .w-\[calc\(100\%_-_59px\)\] {
   width: calc(100% - 59px);
 }
@@ -6661,9 +6666,6 @@ code[class*="language-"],
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-.\!w-10 {
-  width: 2.5rem !important;
 }
 .\!min-w-\[145px\] {
   min-width: 145px !important;
@@ -6793,6 +6795,9 @@ code[class*="language-"],
 }
 .min-w-\[45px\] {
   min-width: 45px;
+}
+.min-w-\[4rem\] {
+  min-width: 4rem;
 }
 .min-w-\[5\.3125rem\] {
   min-width: 5.3125rem;
@@ -7420,9 +7425,6 @@ code[class*="language-"],
 .border-t {
   border-top-width: 1px;
 }
-.\!border-dashed {
-  border-style: dashed !important;
-}
 .border-dashed {
   border-style: dashed;
 }
@@ -7557,9 +7559,6 @@ code[class*="language-"],
 .bg-dark {
   background-color: var(--dark);
 }
-.bg-facebook {
-  background-color: var(--facebook);
-}
 .bg-gray-extralight {
   background-color: var(--gray-extralight);
 }
@@ -7605,9 +7604,6 @@ code[class*="language-"],
 }
 .bg-transparent {
   background-color: transparent;
-}
-.bg-twitter {
-  background-color: var(--twitter);
 }
 .bg-warning {
   background-color: var(--warning);
@@ -8055,6 +8051,10 @@ code[class*="language-"],
   padding-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
   padding-bottom: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
 }
+.\!py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
 .\!pb-0 {
   padding-bottom: 0px !important;
 }
@@ -8399,9 +8399,6 @@ code[class*="language-"],
 }
 .\!text-content {
   color: var(--content) !important;
-}
-.\!text-content3 {
-  color: var(--content3) !important;
 }
 .\!text-danger {
   color: var(--danger) !important;
@@ -12066,9 +12063,6 @@ code[class*="language-"],
   .lg\:order-2 {
     order: 2;
   }
-  .lg\:order-3 {
-    order: 3;
-  }
   .lg\:order-first {
     order: -9999;
   }
@@ -13229,6 +13223,9 @@ code[class*="language-"],
   }
 }
 @media (max-width: 425px) {
+  .\32sm\:-left-24 {
+    left: -6rem;
+  }
   .\32sm\:left-\[12\%\] {
     left: 12%;
   }
@@ -13256,6 +13253,9 @@ code[class*="language-"],
   }
   .\32sm\:\!h-\[250px\] {
     height: 250px !important;
+  }
+  .\32sm\:h-16 {
+    height: 4rem;
   }
   .\32sm\:h-32 {
     height: 8rem;
@@ -13292,6 +13292,9 @@ code[class*="language-"],
   }
   .\32sm\:w-1\/2 {
     width: 50%;
+  }
+  .\32sm\:w-16 {
+    width: 4rem;
   }
   .\32sm\:w-4 {
     width: 1rem;
@@ -13391,6 +13394,9 @@ code[class*="language-"],
   }
   .\32sm\:p-0 {
     padding: 0px;
+  }
+  .\32sm\:p-2 {
+    padding: 0.5rem;
   }
   .\32sm\:p-4 {
     padding: 1rem;
