--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -31,6 +31,7 @@ include ./element-widget1.pug
 include ./element-widget2.pug
 include ./element-widget3.pug
 include ./element-wishlist-product-box.pug
+include ./element-user-follower.pug
 
 //- =====================
 //-  Chat Mixing  
